# drf-course-api

./: .gitignore  README.md  pyproject.toml
src/Video10-Customising permissions/: 10.md  send.http
src/Video10-Customising permissions/api/: serializers.py
src/Video10-Customising permissions/drf_course/: settings.py
src/Video11-JWT Authentication/: 11.md  send.http
src/Video12-refresh/: send.http
src/Video12-refresh/api/: urls.py  views.py
src/Video12-refresh/drf_course/: settings.py
src/Video13-update and delete/: 13.md
src/Video13-update and delete/api/: tests.py  views.py
src/Video13-update and delete/drf_course/: settings.py
src/Video14-drf-spectacular/api/: admin.py  views.py
src/Video14-drf-spectacular/drf_course/: settings.py  urls.py
src/Video15-django-filter and DRF API filtering/: 15.md  send.http
src/Video15-django-filter and DRF API filtering/api/: filter.py  views.py
src/Video15-django-filter and DRF API filtering/drf_course/: settings.py
src/Video16-searchFilter-orderFilter/: 16.md
src/Video17-Writing Filter Backends/: README.md
src/Video18-API Pagination/: README.md
src/Video19-Viewsets & Routers/: send.http
src/Video20-Viewset Actions, Filtering and Permissions/: README.md
src/Video21-Admin vs. Normal User/: README.md  send.http
src/Video22-Creating Nested Objects and Overriding serializer create/: README.md  send.http
src/Video23-Updating Nested Objects and ModelSerializer update/: README.md
src/Video24-ModelSerializer Fields/: README.md
src/Video25 cache with redis/: README.md  send.http
src/Video26-Django and Redis - Vary Headers to Control Caching Behavior/: README.md  schema.yml
src/Video27-API Throttling/: README.md
src/Video28-Testing APIs/: send.http
src/Video29-celery/: README.md  send.http
src/Video5-ListAPIView&GenericAPIView/: 05.md
src/Video6—动态过滤和覆盖get_queryset方法/: 06.md
src/Video8——Apiview/: 08.md
src/Video9-ListCreateAPIView and Generic View Internals/: 09.md
src/drf_course_djoser/: api.http  manage.py
src/start/: 01.md  manage.py  model.dot  start.md
src/video1-Serializers - Response objects-Browsable API/: 01.md  02.md
src/video2-Nested Serializers, SerializerMethodField and Serializer Relations/: 02.md
(+81 files in other folders)
